<resources>
    <string name="app_name">PollutionPatrol</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="report">Report</string>
    <string name="Admin">Map</string>
    <string name="title_activity_report_acitivity">reportAcitivity</string>

    <string name="oilCheckbox">Oil</string>
    <string name="plasticCheckbox">Plastic</string>
    <string name="styrofoamCheckbox">Styrofoam</string>
    <string name="generalCheckbox">General Trash</string>

    <string name="progressValue">Pollution intensity: </string>
    <string name="submitButton">Submit Report!</string>
    <string name="title_activity_location_test">Map</string>

</resources>
